# 30-day-ml-challenge

./: .gitignore  README.md  index.html  projects.js  script.js  style.css
.devcontainer/: devcontainer.json
linear_regression/: README.md  app.py  lin_reg_notebook.ipynb  pyproject.toml  requirements.txt
