[project]
name = "linear-regression"
version = "0.1.0"
description = "Salary prediction using Linear Regression — 30-Day ML Challenge Day 1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.0",
    "streamlit>=1.40.0",
]

